fix contact header

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
   <footer id="contact">
     <div class="content-wrap">
-      <h3 id="footer-header">Let's socialize!</h3>
+      <h3 id="footer-header">Contact</h3>
 
       <div class="contact-info">
         <a href="mailto:d.t.thorwaldson@gmail.com"><i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i></a>
