update friendkeeper description

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="project">
               <h3>FriendKeeper</h3>
               <img width="200rem" src="./images/friendkeeper.png" alt="friendkeeper" />
-              <p>FriendKeeper is a full stack chrome extension that allows users to receive customized reminder notifications to help build and maintain friendships.</p>
+              <p>FriendKeeper is a full stack chrome extension built with Angular that allows users to receive customized reminder notifications to help build and maintain friendships.</p>
           </div>
         </a>
       </div>
