--- a/index.html
+++ b/index.html
@@ -34,49 +34,49 @@
         <h2>Projects</h2>
 
         <a href="https://www.tontinesgames.com/" target="_blank">
-          <div class="project">
+          <div class="project grow">
             <h3>Tontines Marketing Website</h3>
             <img width="200rem" src="./images/tontines.png" alt="tontines" />
             <p>Marketing website built with Strikingly and Shopify to drive traffic/downloads for Tontines mobile game.</p>
           </div>
         </a>
         <a href="http://www.sugarbot.com/" target="_blank">
-          <div class="project">
+          <div class="project grow">
             <h3>Sugarbot Marketing Website</h3>
             <img width="200rem" src="./images/sugarbot.png" alt="sugarbot" />
             <p>Marketing website built with Angular frontend to promote Austin startup Sugarbot.</p>
           </div>
         </a>
         <a href="http://sugartrek.com/" target="_blank">
-          <div class="project">
+          <div class="project grow">
             <h3>Sugartrek Marketing Website</h3>
             <img width="200rem" src="./images/sugartrek.png" alt="sugartrek" />
             <p>Marketing website built Angular and Bootstrap frontend to drive traffic for Sugartrek mobile game.</p>
           </div>
         </a>
         <a href="https://react-redux-movies.surge.sh/" target="_blank">
-          <div class="project">
+          <div class="project grow">
             <h3>React + Redux Movies</h3>
             <img width="200rem" src="./images/react-redux-movies.png" alt="react-redux-movies" />
             <p>Movie searching application built with React and Redux utilizing the OMDB api with a Node/Mongodb backend.</p>
           </div>
         </a>
         <a href="https://wellminder.herokuapp.com" target="_blank">
-          <div class="project">
+          <div class="project grow">
               <h3>Wellminder</h3>
               <img width="200rem" src="./images/wellminder.png" alt="wellminder" />
               <p>Full stack, responsive web application built with React and D3 that tracks and "gamifies" wellness, encouraging users toward positive health choices.</p>
           </div>
         </a>
         <a href="https://recipeers.herokuapp.com" target="_blank">
-          <div class="project">
+          <div class="project grow">
               <h3>Recipeers</h3>
               <img width="200rem" src="./images/recipeers.png" alt="recipeers" />
               <p>Full Stack Social Media platform for creating and sharing recipes. Group project built with Node, PostgreSQL, and Express backend.</p>
           </div>
         <a/>
         <a href="https://dtthor.github.io/q1-project/" target="_blank">
-          <div class="project">
+          <div class="project grow">
               <h3>Avalanche</h3>
               <img width="200rem" src="./images/avalanche.png" alt="avalanche" />
               <p>HTML5 canvas game inspired by the calculator game of the same name. Individual project built for Galvanize Quarter 1.</p>
@@ -92,11 +92,11 @@
       <h3 id="footer-header">Contact</h3>
 
       <div class="contact-info">
-        <a href="mailto:d.t.thorwaldson@gmail.com"><i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i></a>
-        <a href="https://twitter.com/dtthor" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i><span class="sr-only">Twitter</span></a>
-        <a href="https://www.linkedin.com/in/dtthor/" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i><span class="sr-only">LinkedIn</span></a>
-        <a href="https://medium.com/@d.t.thorwaldson" target="_blank"><i class="fa fa-medium fa-2x" aria-hidden="true"></i><span class="sr-only">Medium</span></a>
-        <a href="https://github.com/dtthor" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i><span class="sr-only">GitHub</span></a>
+        <a href="mailto:d.t.thorwaldson@gmail.com"><i class="grow-icon fa fa-envelope-o fa-2x" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/dtthor" target="_blank"><i class="grow-icon fa fa-twitter fa-2x" aria-hidden="true"></i><span class="sr-only">Twitter</span></a>
+        <a href="https://www.linkedin.com/in/dtthor/" target="_blank"><i class="grow-icon fa fa-linkedin fa-2x" aria-hidden="true"></i><span class="sr-only">LinkedIn</span></a>
+        <a href="https://medium.com/@d.t.thorwaldson" target="_blank"><i class="grow-icon fa fa-medium fa-2x" aria-hidden="true"></i><span class="sr-only">Medium</span></a>
+        <a href="https://github.com/dtthor" target="_blank"><i class="grow-icon fa fa-github fa-2x" aria-hidden="true"></i><span class="sr-only">GitHub</span></a>
       </div>
 
       <p>Coded by Dylan Thorwaldson, fueled by <i class="fa fa-heart-o" aria-hidden="true"></i> and <i class="fa fa-coffee" aria-hidden="true"></i></p>
