--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="col-wide">
         <h1>Dylan Thorwaldson</h1>
         <h2>Web Developer</h2>
-        <p>I am a technologist in Austin, TX with a special affinity for front end development, particularly using <a id="text-link" href="https://reactjs.org/" target="_blank">React</a>. I have completed the Web Development Immersive course at <a id="text-link" href="https://www.galvanize.com/austin" target="_blank">Galvanize</a>, and have been doing contract work since! I am also excitedly seeking full time employment in Austin. Check out some of my work below, and please don't hesitate to contact me. I would love to connect! Also, feel free to click the red button below to grab a copy of my resume.</p>
+        <p>I am a technologist in Austin, TX with a special affinity for front end development. I particularly enjoy using <a id="text-link" href="https://reactjs.org/" target="_blank">React</a>. I have completed the Web Development Immersive course at <a id="text-link" href="https://www.galvanize.com/austin" target="_blank">Galvanize</a>, and have been doing contract work since! I am also excitedly seeking full time employment in Austin. Check out some of my work below, and please don't hesitate to contact me. I would love to connect! Also, feel free to click the red button below to grab a copy of my resume.</p>
       </div>
     </div>
   </header>
